--- a/Codigo/back/requirements.txt
+++ b/Codigo/back/requirements.txt
@@ -12,6 +12,7 @@ Jinja2==2.11.3
 lazy-object-proxy==1.6.0
 MarkupSafe==1.1.1
 mccabe==0.6.1
+mysqlclient==2.0.3
 PyJWT==1.4.2
 pylint==2.7.4
 pytz==2021.1
