--- a/Codigo/back/requirements.txt
+++ b/Codigo/back/requirements.txt
@@ -15,6 +15,9 @@ mccabe==0.6.1
 mysqlclient==2.0.3
 PyJWT==1.4.2
 pylint==2.7.4
+pylint-flask==0.6
+pylint-flask-sqlalchemy==0.2.0
+pylint-plugin-utils==0.6
 pytz==2021.1
 six==1.15.0
 SQLAlchemy==1.4.5
